; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_odb.c_git_odb__error_mismatch.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_odb.c_git_odb__error_mismatch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_OID_HEXSZ = common dso_local global i32 0, align 4
@GIT_ERROR_ODB = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [46 x i8] c"object hash mismatch - expected %s but got %s\00", align 1
@GIT_EMISMATCH = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_odb__error_mismatch(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  store i32* %1, i32** %4, align 8
  %8 = load i32, i32* @GIT_OID_HEXSZ, align 4
  %9 = add nsw i32 %8, 1
  %10 = zext i32 %9 to i64
  %11 = call i8* @llvm.stacksave()
  store i8* %11, i8** %5, align 8
  %12 = alloca i8, i64 %10, align 16
  store i64 %10, i64* %6, align 8
  %13 = load i32, i32* @GIT_OID_HEXSZ, align 4
  %14 = add nsw i32 %13, 1
  %15 = zext i32 %14 to i64
  %16 = alloca i8, i64 %15, align 16
  store i64 %15, i64* %7, align 8
  %17 = trunc i64 %10 to i32
  %18 = load i32*, i32** %3, align 8
  %19 = call i32 @git_oid_tostr(i8* %12, i32 %17, i32* %18)
  %20 = trunc i64 %15 to i32
  %21 = load i32*, i32** %4, align 8
  %22 = call i32 @git_oid_tostr(i8* %16, i32 %20, i32* %21)
  %23 = load i32, i32* @GIT_ERROR_ODB, align 4
  %24 = call i32 @git_error_set(i32 %23, i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str, i64 0, i64 0), i8* %12, i8* %16)
  %25 = load i32, i32* @GIT_EMISMATCH, align 4
  %26 = load i8*, i8** %5, align 8
  call void @llvm.stackrestore(i8* %26)
  ret i32 %25
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @git_oid_tostr(i8*, i32, i32*) #2

declare dso_local i32 @git_error_set(i32, i8*, i8*, i8*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
